@@ -28,7 +28,7 @@ January 5, 2016
 
 <p align=right><i>
 <font face=tahoma,arial,helvetica,sans>
-<A HREF=copying.txt>Copyright</A> 2000, 2001, 2002, 2009, 2010, 2014
+<A HREF=copying.txt>Copyright</A> 2000, 2001, 2002, 2009, 2010, 2014-2016
 <br>
 The President and Fellows of Harvard College.
 </font>
